--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -151,6 +151,8 @@ Seattle, WA 98104}
 \cleardoublepage
 \input{Sequences}
 \cleardoublepage
+\input{Ranges}
+\cleardoublepage
 \input{Domains_and_Arrays}
 \cleardoublepage
 \input{Iterators}
