--- a/spec/Iterators.tex
+++ b/spec/Iterators.tex
@@ -75,7 +75,7 @@ is generic, the iterator is passed without being evaluated and is
 treated as a closure within the generic function.
 
 \subsection{Scalar Promotion}
-\label{Scalar Promotion}
+\label{Scalar_Promotion}
 
 A function requires scalar promotion if an iterator (or array, domain,
 or range) is passed to a formal argument with a type that allows the
