--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -89,14 +89,13 @@ language specially:
 \hline
 {\bf symbols} & {\bf use} \\
 \hline
-\verb@= += -= *= /= **= %= &= |= ^= &&= ||= #= <<= >>=@ & assignment \\
+\verb@= += -= *= /= **= %= &= |= ^= &&= ||= <<= >>=@ & assignment \\
 \verb@..@ & arithmetic sequences \\
 \verb@...@ & variable argument lists \\
 \verb@&& || !@ & logical operators \\
 \verb@& | ^ ~ << >>@ & bitwise operators \\
 \verb@== != <= >= < >@ & relational operators \\
 \verb@+ - * / % **@ & arithmetic operators \\
-\verb@#@ & sequence concatenation operator \\
 \verb@:@ & types \\
 \verb@;@ & statement separator \\
 \verb@,@ & expression separator \\
