--- a/spec/Organization.tex
+++ b/spec/Organization.tex
@@ -70,7 +70,7 @@ Section~\ref{Unions}, Unions, describes unions in Chapel.
 Section~\ref{Tuples}, Tuples, describes tuples in Chapel.
 
 \item
-Section~\ref{Sequences}, Sequences, describes sequences in Chapel.
+Section~\ref{Ranges}, Ranges, describes ranges in Chapel.
 
 \item
 Section~\ref{Domains_and_Arrays}, Domains and Arrays, describes
