--- a/spec/Ranges.tex
+++ b/spec/Ranges.tex
@@ -2,6 +2,12 @@
 \label{Ranges}
 \index{ranges}
 
+\subsection{Range Assignment}
+\label{Range_Assignment}
+\index{ranges!assignment}
+
+
+
 \subsection{Arithmetic Sequences}
 \label{Arithmetic_Sequences}
 \index{sequences!arithmetic}
